--- a/styles.css
+++ b/styles.css
@@ -40,38 +40,38 @@ input::placeholder{
     width: 39px;
 }
 
-.buttons{
+.list-selector{
     display: flex;
     align-items: center;
-    margin-top: 0.9rem;
     gap: 0.5rem;
+    margin-top: 0.5rem;
+
 }
 
-.btn{
-    padding: 0;
-    background-color: #fafafa;
+.right-btn{
+    width: 2rem;
+}
+
+.left-btn{
+    width: 2rem;
+    transform: rotate(180deg);
+}
+
+.list-name{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.3rem;
+    font-weight: 600;
+    background-color: #E2E5E3;
+    padding: 0.2rem 1rem;
+    border-radius: 20px;
     border: none;
-    border-bottom: 1px solid #6f6f6f;
-    color: #6F6F6F;
-    font-size: 1rem;
-    font-family: 'Inter', sans-serif;
-    font-size: 0.93rem;
-    cursor: pointer;
+    width: 180px;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.import-btn-label {
-    cursor: pointer;
-}
-
-.import-btn {
-    display: none;
-}
-
-.copy-markdown-btn{
-    position: relative;
-}
-
-.copy-tooltip{
+/* .copy-tooltip{
     position: absolute;
     top: 3.6em;
     left: 135px;
@@ -83,9 +83,9 @@ input::placeholder{
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s;
-}
+} */
 
-.copy-tooltip::before{
+/* .copy-tooltip::before{
     content: "";
     position: absolute;
     left: 50%;
@@ -93,7 +93,7 @@ input::placeholder{
     transform: translateX(-50%);
     border: 10px solid;
     border-color: #000 #0000 #0000 #0000;
-}
+} */
 
 ul {
     width: 87%;
