--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
     margin: 0px;
-    padding: 10px;
+    padding: 20px;
     font-family: 'Open Sans', sans-serif;
-    min-width: 400px;
+    min-width: 380px;
     background-color: #fafafa;
 }
 
@@ -55,11 +55,13 @@ input::placeholder{
 
 .left-btn{
     width: 2rem;
+    cursor: pointer;
 }
 
 .right-btn{
     width: 2rem;
     transform: rotate(180deg);
+    cursor: pointer;
 }
 
 .list-name{
@@ -78,10 +80,12 @@ input::placeholder{
 
 .save-list{
     width: 1.55rem;
+    cursor: pointer;
 }
 
 .options-btn{
     width: 1.6rem;
+    cursor: pointer;
 }
 
 /* .copy-tooltip{
@@ -108,9 +112,9 @@ input::placeholder{
     border-color: #000 #0000 #0000 #0000;
 } */
 
-ul {
+.links-ul {
     width: 87%;
-    margin: 3em auto;
+    margin: 2em auto 3rem;
     line-height: 1.5;
     max-height: 320px;
     overflow: auto;
@@ -126,7 +130,7 @@ ul {
     align-items: center;
 }
 
-li{
+.links-ul li{
     font-size: 1.1rem;
 }
 
@@ -200,3 +204,29 @@ p{
   ::-webkit-scrollbar-button {
     display: none;
   } 
+
+  .modal{
+    background-color: #E2E5E3;
+    border-radius: 10px;
+    width: 380px;
+    margin: auto;
+    display: none;
+  }
+
+  .options-ul{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    list-style: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    padding: 5px 10px;
+    gap: 5px;
+  }
+
+  .options-ul li{
+    font-size: 1.25rem; 
+    cursor: pointer;
+  }
