Add new list functionality and import list feature

--- a/styles.css
+++ b/styles.css
@@ -230,3 +230,11 @@ p{
     font-size: 1.25rem; 
     cursor: pointer;
   }
+  
+.import-btn-label {
+    cursor: pointer;
+}
+
+.import-btn {
+    display: none;
+}
